<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="wrap_content" >
	
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical" >
            
        <LinearLayout
	        android:id="@+id/linearLayout4"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content" >
	
			<TextView
	            android:id="@+id/teamLabel"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_gravity="center"
	            android:paddingLeft="5dip"
	            android:paddingRight="5dip"
	            android:text="@string/teamLabel"
	            android:textAppearance="?android:attr/textAppearanceLarge" />
	        
	        <TextView
	            android:id="@+id/teamNumber"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:paddingLeft="5dip"
	            android:paddingRight="5dip"
	            android:layout_gravity="center_vertical|left"
	            android:textAppearance="?android:attr/textAppearanceMedium" />
	        
	        <TextView
	            android:id="@+id/matchSlotLabel"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:paddingLeft="5dip"
	            android:paddingRight="5dip"
	            android:layout_gravity="center"
	            android:text="@string/matchSlotLabel"
	            android:textAppearance="?android:attr/textAppearanceLarge" />
	        
	        <TextView
	            android:id="@+id/matchSlot"
	            android:layout_width="0dip"
	            android:paddingLeft="5dip"
	            android:paddingRight="5dip"
	            android:layout_height="wrap_content"
	            android:layout_gravity="center_vertical|left"
	            android:layout_weight="1"
	            android:textAppearance="?android:attr/textAppearanceMedium" />
	
	        <Button
	            android:id="@+id/matchScoutingSave"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/save" />
	
	        <Button
	            android:id="@+id/matchScoutingDiscard"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/discard" />
	
	    </LinearLayout>
	
	    <LinearLayout
	        android:id="@+id/linearLayout1"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content" >
	
	        <CheckBox
	            android:id="@+id/broke"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/broke" />
	        <CheckBox
			    android:id="@+id/autonomousWorked"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:text="@string/autonomous" />
	        <CheckBox
			    android:id="@+id/balanced"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:text="@string/balanced" />
	    </LinearLayout>
	        
        <RadioGroup
	    	android:id="@+id/MatchScoutingShootingType"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:orientation="horizontal">

			<RadioButton
			    android:id="@+id/MatchScoutingNoShooting"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:text="@string/noShooting" />
	
	        <RadioButton
	            android:id="@+id/MatchScoutingDunker"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/dunker" />
	
	        <RadioButton
	            android:id="@+id/MatchScoutingShooter"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/shooter" />
		</RadioGroup>
	
	    <TableLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content" >
	
	        <TableRow
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content" >
	
	            <Button
	                android:id="@+id/addTopScore"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/topScore" />
	
	            <EditText
	                android:id="@+id/topScoreTotal"
	                android:layout_width="0dip"
	                android:layout_height="wrap_content"
	                android:layout_weight="1"
	                android:inputType="number"
	                android:text="@string/zero" />
	        </TableRow>
	
	        <TableRow
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content" >
	
	            <Button
	                android:id="@+id/addMidScore"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/midScore" />
	            <EditText
	                android:id="@+id/midScoreTotal"
	                android:layout_width="0dip"
	                android:layout_height="wrap_content"
	                android:layout_weight="1"
	                android:inputType="number"
	                android:text="@string/zero" />
	
	        </TableRow>
	
	        <TableRow
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content" >
	
	            <Button
	                android:id="@+id/addBotScore"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/botScore" />
	
	            <EditText
	                android:id="@+id/botScoreTotal"
	                android:layout_width="0dip"
	                android:layout_height="wrap_content"
	                android:layout_weight="1"
	                android:inputType="number"
	                android:text="@string/zero" />
	        </TableRow>
	        <TableRow
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content" >
		        <TextView
			        android:id="@+id/notesLabel"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:text="@string/notesLabel"
			        android:textAppearance="?android:attr/textAppearanceLarge" />
			    
			    <EditText
			        android:id="@+id/notes"
			        android:layout_width="match_parent"
			        android:layout_height="wrap_content"
	                android:layout_weight="1"
			        android:inputType="textMultiLine" />
		     </TableRow>
	    </TableLayout>
    </LinearLayout>
</ScrollView>